# btest

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .style.yapf  .travis.yml  .update-changes.cfg  CHANGES  CMakeLists.txt  MANIFEST.in  Makefile  OutputHandlers.py  README  VERSION  btest  btest-ask-update  btest-bg-run  btest-bg-run-helper  btest-bg-wait  btest-diff  btest-diff-cut  btest-progress  btest-setsid  btest-sh  btest.cfg.example  output.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: btest.yml
Baseline/examples.t7/: output
btest_lib/: outputhandlers.py
examples/: alternative  my-filter  t1  t5.sh  t7  t7.sh#1  t7.sh#2  t7.sh#3  unstable.sh
examples/sphinx/: .gitignore  Makefile  btest.cfg  conf.py  index.rst
profiles/default/: exclude  include
profiles/example/: finish  setup  transform
sphinx/: btest-diff-rst  btest-rst-cmd  btest-rst-include  btest-rst-pipe  btest-sphinx.py
testing/: Makefile  btest.cfg  btest.tests.cfg
testing/Baseline/tests.abort-on-failure/: output
testing/Baseline/tests.abort-on-failure-with-only-known-fails/: output
testing/Baseline/tests.alternatives-environment/: child-output  output
testing/Baseline/tests.alternatives-filter/: child-output  output
testing/Baseline/tests.alternatives-keywords/: output
testing/Baseline/tests.alternatives-remove-env/: child-output
testing/Baseline/tests.alternatives-remove-env-bad/: child-output  output
testing/Baseline/tests.alternatives-substitution/: child-output  output
testing/Baseline/tests.alternatives-testbase/: output
testing/Baseline/tests.alternatives-undefined/: output
testing/Baseline/tests.binary-diag/: .stdout
testing/Baseline/tests.brief/: out1  out2  (+1 more)
testing/Scripts/: convert-path-list.sh  diff-remove-abspath  dummy-script  is-windows  script-command  strip-iso8601-date  strip-test-base  test-filter  test-output  test-perf
testing/tests/: abort-on-failure-with-only-known-fails.btest  abort-on-failure.btest  alternatives-baseline-dir.test  alternatives-environment.test  alternatives-filter.test  alternatives-keywords.test  alternatives-overwrite-env.test  alternatives-remove-env-bad.test  alternatives-remove-env.test  alternatives-reread-config-baselinedir.test  alternatives-reread-config.test  alternatives-substitution.test  alternatives-testbase.test  alternatives-undefined.test  baseline-dir-env.test  basic-fail.test  basic-succeed.test  binary-diag.test  binary-mode.test  brief.test  btest-cfg-broken-interpol.test  btest-cfg-skip-non-selected-env.test  btest-cfg.test  btest-diff-cut  canonifier-cmdline.test  canonifier-conversion.test  canonifier-fail.test  canonifier.test  console-bsd.test  console-linux.test  console.test  copy-file.test  crlf-line-terminators.test  ctrl-c.test  diag-all.test  diag-file.test  diag.test  diff-brief.test  diff-max-lines.test  diff.test  (+62 more)
(+99 files in other folders)
